solutions/anthos-multicluster/k8s-configs/demo-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: # kpt-merge: /whereami
  name: whereami
  labels:
    istio-injection: enabled
