solutions/anthos-multicluster/k8s-configs/demo-app/tls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata: # kpt-merge: innovapost-pop/mlts-strick
  name: mlts-strick
  namespace: innovapost-pop
spec:
  mtls:
    mode: PERMISSIVE
