solutions/anthos-multicluster/k8s-configs/demo-app/gateway.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata: # kpt-merge: demo/external-http
  name: external-http
  namespace: demo
  annotations:
    configsync.gke.io/cluster-name-selector: "gke-ne1"
spec:
  gatewayClassName: gke-l7-gxlb-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata: # kpt-merge: demo/internal-http
  name: internal-http
  namespace: demo-gateway
  annotations:
    configsync.gke.io/cluster-name-selector: "gke-ne1"
spec:
  gatewayClassName: gke-l7-rilb-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway: internal-http
