solutions/anthos-multicluster/k8s-configs/demo-app/httproute.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata: # kpt-merge: demo/innova-gateway
  name: innova-gateway
  namespace: demo
  labels:
    gateway: external-http
  annotations:
    configsync.gke.io/cluster-name-selector: "gke-ne1"
spec:
  hostnames:
  - "demo-app.testgcp.ca"
  parentRefs:
  - name: external-http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /popRequest
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: demo-app-test
      port: 8080
